Made a page that connects to api project and lists all worlds

--- a/WorldForging2/app/app.component.template.html
+++ b/WorldForging2/app/app.component.template.html
@@ -2,5 +2,6 @@
 <nav>
     <a routerLink="/">Dashboard</a>
     <a routerLink="/personal">PersonalCabinet</a>
+    <a routerLink="/worlds">Worlds</a>
 </nav>
 <router-outlet></router-outlet>
