Created Views, Models, Controllers, Migrations for stories and articles

--- a/WorldForging2/app/app.component.template.html
+++ b/WorldForging2/app/app.component.template.html
@@ -3,5 +3,7 @@
     <a routerLink="/">Dashboard</a>
     <a routerLink="/personal">PersonalCabinet</a>
     <a routerLink="/worlds">Worlds</a>
+    <a routerLink="/article">Articles</a>
+    <a routerLink="/story">Stories</a>
 </nav>
 <router-outlet></router-outlet>
