Further changes to convert "items" to "articles"

--- a/WorldForgingApi/wwwroot/index.html
+++ b/WorldForgingApi/wwwroot/index.html
@@ -30,6 +30,6 @@
 <!-- Step 3. Display the application -->
 <body>
     <!-- Application PlaceHolder -->
-    <opengamelist>Loading...</opengamelist>
+    <worldforging>Loading...</worldforging>
 </body>
 </html>
